<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="0dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/frame_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/shape_bottomline_grey">
            <TextView
                style="@style/SmallTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Secret Backup Key"
                android:textColor="@color/walletBackground"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/gotham_rounded_light" />
        </FrameLayout>
        <TextView
            android:id="@+id/tv_key"
            style="@style/HeaderTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/frame_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_copy"
            android:text="inciduent eiusmod in id commodo"
            android:layout_margin="@dimen/dimen10dp"
            android:maxLines="2"
            android:textColor="@color/secretPinDialogButton"
            android:fontFamily="@font/gotham_rounded_medium"/>
        <ImageView
            android:id="@+id/iv_copy"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="@id/tv_key"
            app:layout_constraintBottom_toBottomOf="@id/tv_key"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/copy"
            android:padding="@dimen/dimen5dp"/>
        <TextView
            android:id="@+id/tv_msg"
            style="@style/SmallTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_key"
            android:fontFamily="@font/gotham_rounded_light"
            android:text="@string/msg_secretPinDialog"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/dimen10dp"
            android:layout_marginEnd="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_marginBottom="@dimen/dimen20dp" />
        <TextView
            android:id="@+id/tv_note"
            style="@style/SmallTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_msg"
            app:layout_constraintStart_toStartOf="@id/tv_msg"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/msg_secretPinDialogNote"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="@font/gotham_rounded_light"
            android:layout_marginEnd="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_marginBottom="@dimen/dimen20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen20dp">
            <FrameLayout
                android:id="@+id/frame_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/ButtonDarkFrameTheme"
                android:visibility="visible"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    android:layout_gravity="center_horizontal"
                    android:theme="@style/ButtonTextTheme" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/ButtonDarkFrameTheme"
                android:visibility="visible"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_submit"
                    android:layout_gravity="center_horizontal"
                    android:theme="@style/ButtonTextTheme" />
            </FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>