<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginScreen"
            type="crypto.base.baseexchange.binders.LoginBinder" />
    </data>
    <RelativeLayout
        android:id="@+id/ll_main"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:isScrollContainer="false"
        android:background="@color/walletBackground">
        <include
            android:id="@+id/header_layout"
            layout="@layout/layout_wallet_header"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_layout">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen20dp"
                android:layout_marginEnd="@dimen/dimen20dp">
                <TextView
                    android:id="@+id/frame_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_email"
                    android:textSize="14sp"
                    android:textColor="@color/textColorLight"
                    android:fontFamily="@font/gotham_rounded_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/dimen30dp"/>
                <FrameLayout
                    android:id="@+id/frame_edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@id/frame_email"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/shape_rectanglefilled_normal"
                    android:layout_marginTop="@dimen/dimen5dp">

                    <EditText
                        android:id="@+id/ed_email"
                        style="@style/EdittextBlankTheme"
                        android:layout_width="366dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="@font/gotham_rounded_light"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/dimen5dp"
                        android:paddingTop="@dimen/dimen5dp"
                        android:paddingEnd="@dimen/dimen5dp"
                        android:paddingBottom="@dimen/dimen5dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/textColorDark"
                        android:textSize="16sp" />
                </FrameLayout>
                <TextView
                    android:id="@+id/frame_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_pass"
                    android:textSize="14sp"
                    android:textColor="@color/textColorLight"
                    android:fontFamily="@font/gotham_rounded_medium"
                    app:layout_constraintTop_toBottomOf="@+id/frame_edEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/dimen30dp"/>
                <FrameLayout
                    android:id="@+id/frame_edPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@id/frame_pass"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/shape_rectanglefilled_normal"
                    android:layout_marginTop="@dimen/dimen5dp">
                    <EditText
                        android:id="@+id/ed_pass"
                        style="@style/EdittextBlankTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:inputType="textPassword"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:paddingStart="@dimen/dimen5dp"
                        android:paddingEnd="@dimen/dimen5dp"
                        android:paddingTop="@dimen/dimen5dp"
                        android:paddingBottom="@dimen/dimen5dp"
                        android:textColorHint="@color/textColorDark"
                        android:fontFamily="@font/gotham_rounded_light"/>
                </FrameLayout>
                <TextView
                    android:id="@+id/tv_forgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/iconColor"
                    android:fontFamily="@font/gotham_rounded_light"
                    app:layout_constraintTop_toBottomOf="@+id/frame_edPass"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/msg_forgotPassword_underline"
                    android:padding="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen30dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <FrameLayout
            android:id="@+id/frame_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            style="@style/ButtonDarkFrameTheme"
            android:visibility="visible"
            android:layout_margin="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:layout_gravity="center_horizontal"
                android:theme="@style/ButtonTextTheme" />
        </FrameLayout>
    </RelativeLayout>
</layout>